[package]
name = "ftt-terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
noise = "0.8.2"
rand = "0.8.5"
rustfft = "5.0.1"
rayon = "1.5.1"
atomic_float = "1.0.0"

[profile.dev]
opt-level = 1

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "terrain_generation_benchmarks"
harness = false